--- a/package.json
+++ b/package.json
@@ -22,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/zhulinwei/express-ts/issues"
   },
-  "homepage": "https://github.com/zhulinwei/express-ts#readme"
+  "homepage": "https://github.com/zhulinwei/express-ts#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.4.20"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/mongodb": "^3.1.22",
+    "@types/mongoose": "^5.3.24",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.1"
+  }
 }
