--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.4.20"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
     "@types/mongodb": "^3.1.22",
     "@types/mongoose": "^5.3.24",
