--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "dev": "ts-node ./src/service.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,9 +31,27 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.11",
     "@types/mongodb": "^3.1.22",
     "@types/mongoose": "^5.3.24",
+    "@types/supertest": "^2.0.7",
+    "jest": "^24.6.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.1",
     "ts-node": "^8.0.3",
     "typescript": "^3.4.1"
-  }
+  },
+ "jest": {
+    "collectCoverageFrom": [
+      "src/**"
+    ],
+    "transformIgnorePatterns": [ "node_modules" ],
+    "transform": {
+    "^.+\\.tsx?$": "ts-jest"
+  },
+    "testMatch": [
+      "**/__tests__/**/*.js?(x)",
+      "**/__tests__/**/*.ts"
+    ]
+  } 
 }
